refactor: Harden solver upload handling
Improves robustness and error handling of the solver upload endpoint.

- Adds explicit multipart limits and a resilient multipart detection path (header heuristic + optional commons check) to avoid stalled large requests.
- Safely parses multipart bodies with clear 400 responses on parse errors and returns a specific error when non-multipart data is received.
- Performs early "uploads frozen" check and encodes status messages into cookies to avoid malformed values.
- Normalizes form fields and accepts a legacy parameter name for backward compatibility.
- Hardens sandbox and IO handling: safer temp-dir cleanup with null checks, explicit file/URI parsing, use of Files.readString, and better null checks for uploaded parts.
- Reduces noisy debug logs and promotes clearer warning/error logging for job submission and extraction failures.